# protobuf-vala

./: meson.build
src/: Makefile.am  meson.build
